<resources>
    <string name="app_name">MyGame</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="NoteOff">Note</string>
    <string name="NoteOn">Note</string>
    <string name="all_clear">消去</string>
    <string name="menu_import">インポート</string>
    <string name="webView_back">BACK</string>
    <string name="webView_forward">FORWARD</string>
    <string name="webView_import">IMPORT</string>
    <string name="title_sudoku">数独</string>
    <string name="title_mysen">MySen</string>
    <string name="menu_back">戻る</string>
    <string name="speed1">×1</string>
    <string name="speed2">×2</string>
    <string name="speed3">×4</string>
    <string name="speed4">×8</string>
    <string name="menu_reset_realm">Realmリセット</string>
</resources>