<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:orientation="horizontal"
    android:padding="1dp">

    <Button
        android:id="@+id/speed1_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="#fff"
        android:text="@string/speed1"
        android:textSize="12sp" />

    <Button
        android:id="@+id/speed2_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="#fff"
        android:text="@string/speed2"
        android:textSize="12sp" />

    <Button
        android:id="@+id/speed3_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="#fff"
        android:text="@string/speed3"
        android:textSize="12sp" />

    <Button
        android:id="@+id/speed4_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="#fff"
        android:text="@string/speed4"
        android:textSize="12sp" />
</LinearLayout>