<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ToggleButton
        android:id="@+id/left_note_toggle"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:background="@drawable/su_number_toggle"
        android:textOff="@string/NoteOff"
        android:textOn="@string/NoteOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number1_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number1"
        android:textOn="@string/number1"
        app:layout_constraintBottom_toTopOf="@id/number4_toggle"
        app:layout_constraintEnd_toStartOf="@id/number2_toggle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/left_note_toggle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number2_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number2"
        android:textOn="@string/number2"
        app:layout_constraintBottom_toBottomOf="@id/number1_toggle"
        app:layout_constraintEnd_toStartOf="@id/number3_toggle"
        app:layout_constraintStart_toEndOf="@+id/number1_toggle"
        app:layout_constraintTop_toTopOf="@id/number1_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number3_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number3"
        android:textOn="@string/number3"
        app:layout_constraintBottom_toBottomOf="@id/number1_toggle"
        app:layout_constraintEnd_toStartOf="@+id/right_note_toggle"
        app:layout_constraintStart_toEndOf="@+id/number2_toggle"
        app:layout_constraintTop_toTopOf="@id/number1_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number4_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number4"
        android:textOn="@string/number4"
        app:layout_constraintBottom_toTopOf="@+id/number7_toggle"
        app:layout_constraintEnd_toEndOf="@id/number1_toggle"
        app:layout_constraintStart_toStartOf="@id/number1_toggle"
        app:layout_constraintTop_toBottomOf="@+id/number1_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number5_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number5"
        android:textOn="@string/number5"
        app:layout_constraintBottom_toBottomOf="@+id/number4_toggle"
        app:layout_constraintEnd_toEndOf="@id/number2_toggle"
        app:layout_constraintStart_toStartOf="@+id/number2_toggle"
        app:layout_constraintTop_toTopOf="@+id/number4_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number6_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number6"
        android:textOn="@string/number6"
        app:layout_constraintBottom_toBottomOf="@+id/number4_toggle"
        app:layout_constraintEnd_toEndOf="@id/number3_toggle"
        app:layout_constraintStart_toStartOf="@+id/number3_toggle"
        app:layout_constraintTop_toTopOf="@+id/number4_toggle"
        app:layout_constraintVertical_bias="0.0" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number7_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number7"
        android:textOn="@string/number7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/number4_toggle"
        app:layout_constraintStart_toStartOf="@+id/number4_toggle"
        app:layout_constraintTop_toBottomOf="@id/number4_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number8_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number8"
        android:textOn="@string/number8"
        app:layout_constraintBottom_toBottomOf="@+id/number7_toggle"
        app:layout_constraintEnd_toEndOf="@id/number5_toggle"
        app:layout_constraintStart_toStartOf="@+id/number5_toggle"
        app:layout_constraintTop_toTopOf="@+id/number7_toggle" />

    <jp.co.my.sudoku.SUFooterNumberToggle
        android:id="@+id/number9_toggle"
        style="@style/SUNumberToggle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/number9"
        android:textOn="@string/number9"
        app:layout_constraintBottom_toBottomOf="@+id/number7_toggle"
        app:layout_constraintEnd_toEndOf="@id/number6_toggle"
        app:layout_constraintStart_toStartOf="@+id/number6_toggle"
        app:layout_constraintTop_toTopOf="@+id/number7_toggle" />

    <ToggleButton
        android:id="@+id/right_note_toggle"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:background="@drawable/su_number_toggle"
        android:textOff="@string/NoteOff"
        android:textOn="@string/NoteOn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
